name:                relational-schemas
version:             0.1.8.1
synopsis:            RDBMSs' schema templates for relational-query
description:         This package contains some RDBMSs' schema structure definitions.
                     .
                     Supported RDBMS schemas are below:
                     .
                     - IBM DB2
                     - PostgreSQL
                     - Microsoft SQLServer
                     - SQLite3
                     - Oracle
                     - MySQL
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino, Shohei Murayama, Shohei Yasutake, Sho KURODA
maintainer:          ex8k.hibino@gmail.com, shohei.murayama@gmail.com, amutake.s@gmail.com, krdlab@gmail.com
copyright:           Copyright (c) 2013-2023 Kei Hibino, 2013 Shohei Murayama, 2013 Shohei Yasutake, 2013 Sho KURODA
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 9.6.2
                     , GHC == 9.4.6
                     , GHC == 9.2.8
                     , GHC == 9.0.2
                     , GHC == 8.10.7
                     , GHC == 8.8.1, GHC == 8.8.2
                     , GHC == 8.6.1, GHC == 8.6.2, GHC == 8.6.3, GHC == 8.6.4, GHC == 8.6.5
                     , GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3, GHC == 8.4.4
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2
extra-source-files:  ChangeLog.md

library
  exposed-modules:
                       Database.Relational.Schema.DB2Syscat.Columns
                       Database.Relational.Schema.IBMDB2.Columns
                       Database.Relational.Schema.IBMDB2

                       Database.Relational.Schema.PgCatalog.PgAttribute
                       Database.Relational.Schema.PgCatalog.PgType
                       Database.Relational.Schema.PostgreSQL.PgAttribute
                       Database.Relational.Schema.PostgreSQL.PgType
                       Database.Relational.Schema.PostgreSQL

                       Database.Relational.Schema.SQLServerSyscat.Columns
                       Database.Relational.Schema.SQLServerSyscat.Types
                       Database.Relational.Schema.SQLServer.Columns
                       Database.Relational.Schema.SQLServer.Types
                       Database.Relational.Schema.SQLServer

                       Database.Relational.Schema.SQLite3Syscat.IndexInfo
                       Database.Relational.Schema.SQLite3Syscat.IndexList
                       Database.Relational.Schema.SQLite3Syscat.TableInfo
                       Database.Relational.Schema.SQLite3.IndexInfo
                       Database.Relational.Schema.SQLite3.IndexList
                       Database.Relational.Schema.SQLite3.TableInfo
                       Database.Relational.Schema.SQLite3

                       Database.Relational.Schema.OracleDataDictionary.TabColumns
                       Database.Relational.Schema.Oracle.TabColumns
                       Database.Relational.Schema.Oracle

                       Database.Relational.Schema.MySQLInfo.Columns
                       Database.Relational.Schema.MySQL.Columns
                       Database.Relational.Schema.MySQL

                       Database.Relational.Schema.DB2Syscat.Config
                       Database.Relational.Schema.PgCatalog.Config
                       Database.Relational.Schema.SQLServerSyscat.Config
                       Database.Relational.Schema.SQLite3Syscat.Config
                       Database.Relational.Schema.OracleDataDictionary.Config
                       Database.Relational.Schema.MySQLInfo.Config

                       Database.Custom.IBMDB2
                       Database.Custom.PostgreSQL
                       Database.Custom.SQLServer
                       Database.Custom.SQLite3
                       Database.Custom.Oracle
                       Database.Custom.MySQL

  other-modules:
                       Database.Relational.Schema.IBMDB2.Config
                       Database.Relational.Schema.IBMDB2.Tabconst
                       Database.Relational.Schema.IBMDB2.Keycoluse

                       Database.Relational.Schema.PostgreSQL.Config
                       Database.Relational.Schema.PostgreSQL.PgConstraint
                       Database.Relational.Schema.PostgreSQL.PgNamespace
                       Database.Relational.Schema.PostgreSQL.PgClass

                       Database.Relational.Schema.SQLServer.Config
                       Database.Relational.Schema.SQLServer.IndexColumns
                       Database.Relational.Schema.SQLServer.Indexes

                       Database.Relational.Schema.SQLite3.Config

                       Database.Relational.Schema.Oracle.Config
                       Database.Relational.Schema.Oracle.ConsColumns
                       Database.Relational.Schema.Oracle.Constraints

                       Database.Relational.Schema.MySQL.Config
                       Database.Relational.Schema.MySQL.KeyColumnUsage
                       Database.Relational.Schema.MySQL.TableConstraints

  build-depends:         base <5
                       , template-haskell
                       , containers
                       , time
                       , bytestring

                       , sql-words
                       , relational-query >= 0.12.2

  if impl(ghc == 7.4.*)
    build-depends:       ghc-prim == 0.2.*

  hs-source-dirs:      src
  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat
  if impl(ghc >= 8) && impl(ghc < 8.8)
    ghc-options:         -Wnoncanonical-monadfail-instances

  default-language:    Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
