name:                sql-words
version:             0.1.2.0
synopsis:            Simple idea SQL keywords data constructor into OverloadedString
description:         This package contiains SQL keywords constructors defined as
                     OverloadedString literals and helper functions to concate these.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2013 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                        Language.SQL.Keyword.Type
                        Language.SQL.Keyword.Concat
                        Language.SQL.Keyword

  other-modules:
                        Language.SQL.Keyword.Internal.Type

  build-depends:          base <5
  hs-source-dirs:       src
  ghc-options:          -Wall

  default-language:     Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
