name:                text-postgresql
version:             0.0.1.0
synopsis:            Parser and Printer of PostgreSQL extended types
description:         This package involves parser and printer for
                     text expressions of PostgreSQL extended types.
                     - inet type, cidr type
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2015 Kei Hibino
category:            Database
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:
                       Data.PostgreSQL.NetworkAddress
                       Database.PostgreSQL.Parser
                       Database.PostgreSQL.Printer
  other-modules:
                       Control.Monad.Either.Plus
                       Text.Parser.List
                       Text.Printer.List

  build-depends:         base <5
                       , transformers
                       , dlist
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite pp
  build-depends:         base <5
                       , QuickCheck
                       , quickcheck-simple
                       , text-postgresql
  type:                exitcode-stdio-1.0
  main-is:             ppIso.hs
  hs-source-dirs:      test

  ghc-options:         -Wall
  default-language:     Haskell2010
