name:                hrr-example-HDBC-MySQL
version:             0.1.0.0
synopsis:            mysql driver example
-- description:
license:             BSD3
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable example
  hs-source-dirs:
    src
  main-is:
    Main.hs
  -- other-modules:
  other-extensions:
      TemplateHaskell
    , FlexibleInstances
    , MultiParamTypeClasses
    , MonadComprehensions
  build-depends:
      base >=4.6 && <5
    , template-haskell >=2.8
    , HDBC >=2.3
    , HDBC-mysql >=0.6 && <0.7
    , HDBC-session
    , names-th
    , relational-query >= 0.7
    , relational-schemas
    , relational-query-HDBC >= 0.4
    , time
  default-language:
    Haskell2010
  ghc-options:
    -Wall
