name:                hrr-example-HDBC-postgresql
version:             0.0.1.0
synopsis:            Example codes for relational-query-HDBC which depends on PostgreSQL
description:         This package contains the example codes for relational-query-HDBC which depends on PostgreSQL
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.10

Executable example1
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , product-isomorphic
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  other-modules:
                       PgTestDataSource
                       User
                       Group
                       Membership
                       QueryExample
  main-is:             run.hs
  hs-source-dirs:      example/1, example
  ghc-options:         -Wall

Executable example1O
  if impl(ghc < 8.0)
    buildable:         False
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , product-isomorphic
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  other-modules:
                       PgTestDataSource
                       User
                       Group
                       Membership
                       QueryExampleO
  main-is:             runO.hs
  hs-source-dirs:      example/1, example
  ghc-options:         -Wall

Executable example1Arr
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , product-isomorphic
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  other-modules:
                       PgTestDataSource
                       User
                       Group
                       Membership
                       QueryArrowExample
  main-is:             runArrow.hs
  hs-source-dirs:      example/1, example
  ghc-options:         -Wall

Executable example2
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , product-isomorphic
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  other-modules:
                       PgTestDataSource
                       KeyTest
  main-is:             show.hs
  hs-source-dirs:      example/2, example
  ghc-options:         -Wall

Executable example3
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , product-isomorphic
                       , names-th
                       , persistable-record
                       , relational-query
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  other-modules:
                       PgTestDataSource
                       History
                       SetA
                       SetB
  main-is:             query.hs
  hs-source-dirs:      example/3, example
  ghc-options:         -Wall

Executable example4
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell
                       , product-isomorphic
                       , names-th
                       , persistable-record
                       , relational-query >= 0.11.2
                       , HDBC
                       , HDBC-session
                       , HDBC-postgresql
                       , relational-query-HDBC
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  other-modules:
                       PgTestDataSource
                       One
                       StockGoods
  main-is:             modifyExample.hs
  hs-source-dirs:      example/4, example
  ghc-options:         -Wall
