name:                hrr-oracle-example
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              amutake
maintainer:          amutake.s@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hrr-oracle-example
  main-is:           main.hs
  other-modules:     DataSource
  -- other-extensions:
  build-depends:       base <5
                     , persistable-record
                     , HDBC
                     , HDBC-odbc
                     , HDBC-session
                     , relational-query
                     , relational-query-HDBC
                     , relational-Oracle
                     , template-haskell
  hs-source-dirs: src
  default-language:    Haskell2010
